# sysex

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/midispec/: akai_lpk25.hpp  akai_mpx8.hpp  midispec.hpp  yamaha_dx7.hpp  yamaha_spx90.hpp  yamaha_tx81z.hpp
include/midispec/core/: capabilities.hpp  hardware.hpp  integral.hpp
include/midispec/spec/: akai_lpk25.hpp  akai_mpx8.hpp  korg_microkorg.hpp  yamaha_dx7.hpp  yamaha_spx90.hpp  yamaha_tx81z.hpp
include/midispec/test/: gtest.hpp  vst3.hpp
include/sysex/: yamaha_dx7.hpp  yamaha_spx90.hpp  yamaha_tx81z.hpp
include/sysex/core/: hardware.hpp  parameter.hpp
source/: akai_lpk25.cpp  akai_mpx8.cpp  novation_launchpads.cpp  yamaha_dx7.cpp  yamaha_spx90.cpp  yamaha_tx81z.cpp
source/spec/: akai_lpk25.cpp  akai_mpx8.cpp  korg_microkorg.cpp  yamaha_dx7.cpp  yamaha_spx90.cpp  yamaha_tx81z.cpp
source/test/: gtest.cpp
test/: gtest_akai_mpx8.cpp  gtest_novation_launchpads.cpp  test_akai_mpx8.cpp  test_yamaha_dx7.cpp  test_yamaha_spx90.cpp  test_yamaha_tx81z.cpp
test/gtest/: gtest_akai_lpk25.cpp  gtest_akai_mpx8.cpp  gtest_yamaha_dx7.cpp  gtest_yamaha_spx90.cpp  gtest_yamaha_tx81z.cpp
test/vst3/: vst3_yamaha_dx7.cpp
